--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,44 +1,37 @@
 ﻿<Window x:Class="JsonSearchApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Json Search App" Height="300" Width="400"
-        WindowStartupLocation="CenterScreen">
-
-    <Window.Resources>
-        <Style TargetType="TextBlock">
-            <Setter Property="Margin" Value="0,10"/>
-        </Style>
-
-        <Style TargetType="TextBox">
-            <Setter Property="Padding" Value="10"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="BorderBrush" Value="LightGray"/>
-        </Style>
-
-        <Style TargetType="Button">
-            <Setter Property="Margin" Value="0,20,0,0"/>
-            <Setter Property="Padding" Value="10"/>
-            <Setter Property="Background" Value="SteelBlue"/>
-            <Setter Property="Foreground" Value="White"/>
-        </Style>
-
-    </Window.Resources>
-
-    <Grid>
-        <StackPanel>
-            <TextBlock Text="Enter Code Number:" 
-                       FontSize="16" 
-                       FontWeight="Medium"/>
-
-            <TextBox x:Name="codeTextBox" Height="35" BorderBrush="#FF770E0E" Background="#FFECECEC"/>
-            <Button Content="Search" Click="SearchButton_Click"
-                    Height="45"
-                    FontSize="14" FontWeight="Medium"/>
-
-            <TextBox x:Name="resultTextBox"  
-                     IsReadOnly="True"
-                     FontSize="14"/>
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
+        Title="SCCM Capabilities Search" Height="584" Width="803">
+    <Grid Background="#FF121C27">
+        <Grid Grid.Row="0" Background="#171717" Margin="0,0,0,475">
+            <TextBlock Text="SCCM Capabilities Search" VerticalAlignment="Top"
+                Margin="10,10,449,0"
+                FontSize="28" Foreground="White"/>
+            <Button Content="!" HorizontalAlignment="Right" 
+                VerticalAlignment="Top"
+                Margin="0,10,10,0" 
+                Background="Transparent" BorderBrush="White"
+                Foreground="White" FontSize="16" 
+                Click="About_Click" FontWeight="Bold" />
+        </Grid>
+        <StackPanel Margin="20,115,20,20">
+            <TextBlock Text="Enter the code to search:"
+               FontFamily="Segoe UI" FontWeight="Bold" FontSize="14" Foreground="#FF99BCD6" Margin="5,0,0,10"/>
+            <StackPanel Orientation="Horizontal">
+                <TextBox x:Name="codeTextBox" FontSize="14" FontWeight="Bold" Background="Black" Foreground="White" Width="125" Height="28" Margin="0,0,10,0" TextChanged="codeTextBox_TextChanged"/>
+                <Button Content="Search" Click="SearchButton_Click" Background="#FF3F82F1" Height="28" Width="80"/>
+                <Button Content="Clear" Click="ClearButton_Click" Background="#FF3F82F1" Width="91" Margin="5,0,10,0"/>
+            </StackPanel>
+            <TextBlock x:Name="resultTextBlock" Height="311" Width="740" Margin="0,10,10,0" Background="Black" MouseRightButtonDown="ResultTextBlock_MouseRightButtonDown" Foreground="#FF7E8EB3" FontWeight="Bold" FontFamily="Cascadia Code" FontSize="14">
+                <TextBlock.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Copy" Click="CopyMenuItem_Click"/>
+                    </ContextMenu>
+                </TextBlock.ContextMenu>
+            </TextBlock>
         </StackPanel>
     </Grid>
-
 </Window>
